I think I fixed all the bugs and the sides work upto Z13 then it breaks LOL xD

--- a/configs.json
+++ b/configs.json
@@ -1,3 +1,7 @@
 {
-  "logoGame":"https://cdn.discordapp.com/attachments/666820187105919019/666844481215004692/da_bomb.png"
+  "logoGame":"https://cdn.discordapp.com/attachments/666820187105919019/666844481215004692/da_bomb.png",
+  "status":{
+    "presence":"playing",
+    "activity":"minesweeper"
+  }
 }
