--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord-plays-minesweeper",
+  "name": "plays-minesweeper",
   "version": "1.0.0",
   "description": "",
   "main": "bot.js",
