--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "jimp": "^0.9.3"
+    "jimp": "^0.9.3",
+    "jpeg-js": "^0.4.1"
   }
 }
